# demo

./: .gitignore  README.md  自述.md
ManagementSystems/: CMakeLists.txt
ManagementSystems/ManagementSystems/: main.cpp  workManager.h
ManagementSystems/include/: boss.h  manager.h  workManager.h  worker.h
ManagementSystems/src/: boss.cpp  employee.cpp  employee.h  main.cpp  manager.cpp  workManager.cpp
cursor/: case.cpp  doem1.cpp  dome.cpp  dome2.cpp  dome3.cpp  dome4.cpp  dome5.cpp  dome6.cpp
leetcode/Doubly_Linked_List/: LinkList.cpp  LinkList.h
leetcode/vs2022/Doubly_Linked_List/: Doubly_Linked_List.sln
leetcode/vs2022/Doubly_Linked_List/Doubly_Linked_List/: Doubly_Linked_List.vcxproj  Doubly_Linked_List.vcxproj.filters
leetcode/vs2022/Doubly_Linked_List/Doubly_Linked_List/x64/Debug/: vc143.idb
leetcode/vs2022/Doubly_Linked_List/Doubly_Linked_List/x64/Debug/Doubly_L.da2f0823.tlog/: Doubly_Linked_List.lastbuildstate
leetcode/vs_code/src/: main.cpp
